# Tiralabra-pakkausalgoritmit

./: .coveragerc  README.md  pyproject.toml  tasks.py
documentation/: implementation.md  specification.md  testing.md  user_manual.md
documentation/weeklyreports/: weeklyreport1.md  weeklyreport2.md  weeklyreport3.md  weeklyreport4.md  weeklyreport5.md  weeklyreport6.md  weeklyreport7.md
src/: compression_comparator.py  filehandler.py  huffman.py  lzw.py  main.py  text_decompressed.txt  ui.py
src/algorithms/: huffman.py  lzw.py
src/tests/: compression_comparator_test.py  huffman_invariant_test.py  huffman_test.py  lzw_invariant_test.py  lzw_test.py
src/tests/automatic/: compression_comparator_automatic_test.py
src/tests/unit/: compression_comparator_test.py  huffman_test.py  lzw_invariant_test.py  lzw_test.py
src/textfiles/: book_of_han_chinese.txt  epic_poem_of_finland.txt  kevat_ja_takatalvi.txt  les_miserables.txt  life_of_a_philosopher.txt  lorem_ipsum.txt  monte_cristo.txt  seitseman_veljesta.txt  symbolic_logic.txt
src/utilities/: filehandler.py  utils.py
